--- a/package.json
+++ b/package.json
@@ -13,20 +13,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^15.0.3",
+    "@types/joi": "^14.3.3",
     "cron": "^1.7.1",
-    "dot-object": "^1.7.1",
-    "node-docker-api": "^1.1.22"
+    "docker-events": "0.0.2",
+    "dockerode": "^2.5.8",
+    "dot-object": "^1.7.1"
   },
   "devDependencies": {
+    "@types/dockerode": "^2.5.19",
     "@types/expect": "^1.20.4",
     "@types/mocha": "^5.2.7",
+    "@types/node": "^12.0.7",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^6.0.2",
     "ts-mocha": "^6.0.0",
     "tsc": "^1.20150623.0",
     "tslint": "^5.17.0",
-    "typescript": "^3.5.1",
-    "mocha": "^6.0.2",
-    "@types/node": "^12.0.7",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1"
+    "typescript": "^3.5.1"
   }
 }
