--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "target": "es2017",
-    "module": "commonjs"
+    "module": "commonjs",
+    "outDir": "dist/",
+    "sourceMap": true
   },
   "include": [
     "src/**/*.ts"
