--- a/package.json
+++ b/package.json
@@ -6,31 +6,42 @@
   "readme": "README.md",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "npx ts-node src/index.ts",
     "build": "tsc",
     "test": "ts-mocha src/**/*.spec.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/joi": "^15.0.3",
-    "@types/joi": "^14.3.3",
-    "cron": "^1.7.1",
+    "@hapi/joi": "^15.1.1",
+    "@types/hapi__joi": "^17.1.4",
+    "cron": "^1.8.2",
     "docker-events": "0.0.2",
     "dockerode": "^2.5.8",
-    "dot-object": "^1.7.1"
+    "dot-object": "^1.9.0",
+    "joi": "^17.2.1",
+    "make-dir": "^3.1.0",
+    "moment": "^2.27.0",
+    "move-file": "^1.2.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "ts-node": "^8.10.2",
+    "tsyringe": "^4.3.0"
   },
   "devDependencies": {
-    "@types/dockerode": "^2.5.19",
+    "@types/cron": "^1.7.2",
+    "@types/dockerode": "^2.5.34",
     "@types/expect": "^1.20.4",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.7",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^12.12.54",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^8.1.3",
+    "jsdoc": "^3.6.5",
+    "mocha": "^6.2.3",
     "ts-mocha": "^6.0.0",
     "tsc": "^1.20150623.0",
-    "tslint": "^5.17.0",
-    "typescript": "^3.5.1"
+    "tslint": "^5.20.1",
+    "typescript": "^3.9.7"
   }
 }
