--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hapi/joi": "^15.1.1",
     "@types/hapi__joi": "^17.1.4",
+    "@types/winston": "^2.4.4",
     "cron": "^1.8.2",
     "docker-events": "0.0.2",
     "dockerode": "^2.5.8",
@@ -26,7 +27,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
-    "tsyringe": "^4.3.0"
+    "tsyringe": "^4.3.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/cron": "^1.7.2",
