Complete switch to 'config', update & rework mocha, improve docker runtime, rework target system, implement s3 target

--- a/.mocharc.yml
+++ b/.mocharc.yml
@@ -1,4 +1,5 @@
-require: "reflect-metadata"
+require:
+  - "reflect-metadata"
+  - "test/mocha-hooks.ts"
 spec: 'src/**/*.spec.ts'
-file:
-- test/mocha-setup.ts
+color: true
