--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "readme": "README.md",
   "main": "dist/index.js",
   "scripts": {
-    "start": "npx ts-node src/index.ts",
+    "start": "node dist/index.js",
+    "start-ts": "npx ts-node src/index.ts",
     "build": "tsc",
-    "test": "ts-mocha src/**/*.spec.ts",
+    "test": "NODE_ENV=test;TMP_PATH=./tmp/test ts-mocha src/**/*.spec.ts",
     "docs": "jsdoc --verbose -c jsdoc.json"
   },
   "author": "",
@@ -17,6 +18,7 @@
     "@types/config": "0.0.36",
     "@types/yaml": "^1.9.7",
     "aws-sdk": "^2.757.0",
+    "aws-sdk-mock": "^5.1.0",
     "config": "^3.3.2",
     "cron": "^1.8.2",
     "docker-events": "0.0.2",
@@ -46,8 +48,8 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "jsdoc": "^3.6.6",
-    "mocha": "^6.2.3",
-    "ts-mocha": "^6.0.0",
+    "mocha": "^8.2.1",
+    "ts-mocha": "^8.0.0",
     "tsc": "^1.20150623.0",
     "tslint": "^5.20.1",
     "typescript": "^4.0.3"
