--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docker-db-backup",
+  "name": "backer",
   "version": "0.0.1",
   "description": " A tool to backup multiple databases hosted in docker container to s3/minio",
   "repository": "git@github.com:byte-it/backer.git",
@@ -15,8 +15,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/config": "0.0.36",
-    "@types/yaml": "^1.9.7",
     "aws-sdk": "^2.757.0",
     "aws-sdk-mock": "^5.1.0",
     "config": "^3.3.2",
@@ -32,18 +30,22 @@
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
     "tsyringe": "^4.3.0",
+    "uuid": "^8.3.2",
     "winston": "^3.3.3",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
+    "@types/config": "0.0.36",
     "@types/cron": "^1.7.2",
     "@types/dockerode": "^2.5.34",
     "@types/expect": "^1.20.4",
     "@types/hapi__joi": "^17.1.4",
     "@types/mocha": "^5.2.7",
     "@types/moment": "^2.13.0",
-    "@types/node": "^12.12.54",
+    "@types/node": "^14.14.37",
+    "@types/uuid": "^8.3.0",
     "@types/winston": "^2.4.4",
+    "@types/yaml": "^1.9.7",
     "better-docs": "^2.3.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
