--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -15,6 +15,7 @@ services:
   mariadb_local:
     image: mariadb:latest
     labels:
+      backer.enabled: true
       backer.type: 'mysql'
       backer.interval: '* * * * *'
       backer.network: 'test_default'
@@ -28,6 +29,7 @@ services:
   mariadb_s3:
     image: mariadb:latest
     labels:
+      backer.enabled: true
       backer.type: 'mysql'
       backer.interval: '* * * * *'
       backer.network: 'test_default'
@@ -39,6 +41,13 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: test
+
+  mariadb_static:
+    image: mariadb:latest
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: test
+
 
   minio:
     image: minio/minio:RELEASE.2020-10-03T02-19-42Z
