--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^6.5.1",
+    "@sentry/tracing": "^6.5.1",
     "aws-sdk": "^2.885.0",
     "aws-sdk-mock": "^5.1.0",
     "config": "^3.3.6",
     "cron": "^1.8.2",
-    "docker-events": "0.0.2",
     "dockerode": "^3.2.1",
     "dot-object": "^1.9.0",
     "express": "^4.17.1",
+    "got": "^11.8.2",
     "joi": "^17.4.0",
     "luxon": "^1.26.0",
     "make-dir": "^3.1.0",
@@ -37,20 +39,20 @@
     "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/luxon": "^1.26.3",
+    "@sentry/types": "^6.5.1",
     "@types/config": "0.0.36",
     "@types/cron": "^1.7.2",
     "@types/dockerode": "^2.5.34",
     "@types/expect": "^1.20.4",
+    "@types/express": "^4.17.11",
     "@types/hapi__joi": "^17.1.6",
+    "@types/luxon": "^1.26.3",
     "@types/mocha": "^5.2.7",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.14.37",
     "@types/uuid": "^8.3.0",
     "@types/winston": "^2.4.4",
     "@types/yaml": "^1.9.7",
-    "better-docs": "^2.3.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "jsdoc": "^3.6.6",
