Add filesize to manifest & validate MD5 on target

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "make-dir": "^3.1.0",
     "md5-file": "^5.0.0",
     "move-file": "^1.2.0",
+    "pretty-bytes": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
@@ -52,6 +53,7 @@
     "@types/mocha": "^5.2.7",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.14.37",
+    "@types/rimraf": "^3.0.0",
     "@types/uuid": "^8.3.0",
     "@types/winston": "^2.4.4",
     "@types/yaml": "^1.9.7",
