--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@sentry/node": "^6.5.1",
     "@sentry/tracing": "^6.5.1",
     "aws-sdk": "^2.885.0",
-    "aws-sdk-mock": "^5.1.0",
     "config": "^3.3.6",
     "cron": "^1.8.2",
     "dockerode": "^3.2.1",
@@ -30,6 +29,7 @@
     "make-dir": "^3.1.0",
     "md5-file": "^5.0.0",
     "move-file": "^1.2.0",
+    "package-json-type": "^1.0.3",
     "pretty-bytes": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -46,6 +46,7 @@
     "@types/config": "0.0.36",
     "@types/cron": "^1.7.2",
     "@types/dockerode": "^2.5.34",
+    "@types/dot-object": "^2.1.2",
     "@types/expect": "^1.20.4",
     "@types/express": "^4.17.11",
     "@types/hapi__joi": "^17.1.6",
@@ -57,6 +58,7 @@
     "@types/uuid": "^8.3.0",
     "@types/winston": "^2.4.4",
     "@types/yaml": "^1.9.7",
+    "aws-sdk-mock": "^5.1.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "jsdoc": "^3.6.6",
