--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "es2017",
     "module": "commonjs",
     "outDir": "dist/",
+    "declaration": true,
     "sourceMap": true
   },
   "include": [
